# project-templates

./: .dockerignore  .env  .gitignore  Makefile  Pipfile  README.md  generate-template  install.sh  install_labextensions  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.development.vscode.yml
docker/: Dockerfile  docker-compose.development.yml  docker-compose.override.yml  docker-compose.yml
python-cpu/: .dockerignore  .env  .gitignore  Makefile  install_labextensions  pyproject.toml
python-cpu/.devcontainer/: devcontainer.json
python-cpu/docker/: Dockerfile  docker-compose.development.yml  docker-compose.yml
python-gpu/: .dockerignore  .env  .gitignore  Makefile  pyproject.toml
python-gpu-conda/: .dockerignore  .env  .gitignore  Makefile  environment.yml  install_labextensions  pyproject.toml
python-gpu-conda/.devcontainer/: devcontainer.json  docker-compose.development.vscode.yml
python-gpu-conda/docker/: Dockerfile  docker-compose.development.yml
python-gpu/.devcontainer/: devcontainer.json  docker-compose.development.vscode.yml
python-gpu/docker/: Dockerfile  docker-compose.development.yml  docker-compose.yml
